# dplife

./: .gitignore  Cargo.toml  build.rs
d3dx12/: Cargo.toml  build.rs  packages.config
d3dx12/src/: build.rs  descriptor_heaps.rs  lib.rs  pipeline_states.rs
src/: camera.rs  imgui_manager.rs  main.rs  renderer.rs  ui.rs
src/particle_life/: mod.rs  particle_life.hlsl
src/renderer/: points.rs  points_renderer.hlsl
