[package]
name = "dplife"
authors = ["Damyan Pepper <damyanp@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
array-init = "2.0.0"
d3dx12 = { path = "d3dx12" }
imgui = "0.11.0"
imgui-windows-d3d12-renderer = "0.1"
imgui-winit-support = "0.11.0"
winit = "0.27.5"

[dependencies.windows]
version = "0.54.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Dxgi",
]

# Uncomment this if making changes to these crates locally

# [patch.crates-io]
# imgui-windows-d3d12-renderer = { path = "../imgui-windows-d3d12-renderer" }

