[package]
name = "dplife"
authors = ["Damyan Pepper <damyanp@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
array-init = "2.0.0"
d3dx12 = { path = "d3dx12" }

# Need imgui-rs to publish >0.12.0 with required bug fixes before we can use
# crates.io versions of these crates.
imgui = { git = "https://github.com/imgui-rs/imgui-rs.git", rev = "67f7f11363e62f09aa0e1288a17800e505860486" }
imgui-winit-support = { git = "https://github.com/imgui-rs/imgui-rs.git", rev = "67f7f11363e62f09aa0e1288a17800e505860486" }
imgui-windows-d3d12-renderer = { git = "https://github.com/damyanp/imgui-windows-d3d12-renderer.git" }
winit = "^0.29.3"
rand = "0.9.0"
vek = "0.17.1"
palette = "0.7.5"

[dependencies.windows]
version = "0.59.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Dxgi",
]

[build-dependencies]
d3dx12 = { path = "d3dx12" }

# Uncomment this if making changes to these crates locally

#[patch.crates-io]
#imgui-windows-d3d12-renderer = { path = "../imgui-windows-d3d12-renderer" }

[lints.clippy]
pedantic = { level="deny", priority= -1 }
